syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "modification_tag.proto";

option (gogoproto.goproto_enum_prefix_all) = true;

message ActualLRPGroup {
  ActualLRP instance = 1;
  ActualLRP evacuating = 2;
}

message PortMapping {
  uint32 container_port = 1;
  uint32 host_port = 2;
  uint32 container_tls_proxy_port = 3 [(gogoproto.jsontag) = "container_tls_proxy_port,omitempty"];
  uint32 host_tls_proxy_port = 4 [(gogoproto.jsontag) = "host_tls_proxy_port,omitempty"];
}

message ActualLRPKey {
  string process_guid = 1;
  int32 index = 2;
  string domain = 3;
}

message ActualLRPInstanceKey {
  string instance_guid = 1;
  string cell_id = 2;
}

message ActualLRPNetInfo {
  string address = 1;
  repeated PortMapping ports = 2 [(gogoproto.jsontag) = "ports"];
  string instance_address = 3 [(gogoproto.jsontag) = "instance_address,omitempty"];
}

message ActualLRP {
  enum Presence {
    ORDINARY   = 0 [(gogoproto.enumvalue_customname) = "Ordinary"];
    EVACUATING = 1 [(gogoproto.enumvalue_customname) = "Evacuating"];
    SUSPECT    = 2 [(gogoproto.enumvalue_customname) = "Suspect"];
  }

  ActualLRPKey actual_lrp_key = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  ActualLRPInstanceKey actual_lrp_instance_key = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  ActualLRPNetInfo actual_lrp_net_info = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  int32 crash_count = 4;
  string crash_reason = 5 [(gogoproto.jsontag) = "crash_reason,omitempty"];
  string state = 6;
  string placement_error = 7 [(gogoproto.jsontag) = "placement_error,omitempty"];
  int64 since = 8;
  ModificationTag modification_tag = 9 [(gogoproto.nullable) = false];
  Presence presence = 10;
}
