syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actual_lrp.proto";
import "error.proto";

message ActualLRPLifecycleResponse {
  Error error = 1;
}

message ActualLRPGroupsResponse {
  Error error = 1;
  repeated ActualLRPGroup actual_lrp_groups = 2;
}

message ActualLRPGroupResponse {
  Error error = 1;
  ActualLRPGroup actual_lrp_group = 2;
}

message ActualLRPGroupsRequest {
  string domain = 1;
  string cell_id = 2;
}

message ActualLRPGroupsByProcessGuidRequest {
  string process_guid = 1;
}

message ActualLRPGroupByProcessGuidAndIndexRequest {
  string process_guid = 1;
  int32 index = 2;
}

message ClaimActualLRPRequest {
  string process_guid = 1;
  int32 index = 2;
  ActualLRPInstanceKey actual_lrp_instance_key = 3;
}

message StartActualLRPRequest {
  ActualLRPKey actual_lrp_key = 1;
  ActualLRPInstanceKey actual_lrp_instance_key = 2;
  ActualLRPNetInfo actual_lrp_net_info = 3;
}

message CrashActualLRPRequest {
  ActualLRPKey actual_lrp_key = 1;
  ActualLRPInstanceKey actual_lrp_instance_key = 2;
  string error_message = 3;
}

message FailActualLRPRequest {
  ActualLRPKey actual_lrp_key = 1;
  string error_message = 2;
}

message RetireActualLRPRequest {
  ActualLRPKey actual_lrp_key = 1;
}

message RemoveActualLRPRequest {
  string process_guid = 1;
  int32 index = 2;
  ActualLRPInstanceKey actual_lrp_instance_key = 3;
}

message ActualLRPsResponse {
  Error error = 1;
  repeated ActualLRP actual_lrps = 2;
}

message ActualLRPsRequest {
  string domain = 1;
  string cell_id = 2;
  string process_guid = 3;
  oneof optional_index {
    int32 index = 4;
  }
}

